Edit File Index

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     Praktikum RPL 11 - Git Lanjut Bagian 2
 </head>
 <body>
-    Kamis 9 Jini 2022
+    Kamis 9 Jini 2022;
     Lutfi M0520062
 </body>
 </html>
